k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validate-frontend
  labels:
    app: validate-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: validate-frontend
  template:
    metadata:
      labels:
        app: validate-frontend
    spec:
      containers:
        - image: ghcr.io/klimatbyran/validate-frontend
          name: validate-frontend
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
