k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validate-frontend
spec:
  selector:
    app: validate-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
